--- a/report.tex
+++ b/report.tex
@@ -468,10 +468,10 @@ represents brokerage
 \item{Covariate V-related popularity, which reflects the sum of covariate V for all actors to whom actor i is connected}
 \item{Covariate V-related activity, which reflects the actor i's out-degree multiplied by his covariate V value.}
 \item{Covariate V-related dissimilarity, which reflects the sum of differences in covariate V values' between actor i and all actors to whom actor i is connected.}
-\item{in-in degree assortativity, which reflects }
-\item{in-out degree assortativity, which reflects}
-\item{out-in degree assortativity, which reflects}
-\item{out-out degree assortativity, which reflects}
+\item{in-in degree assortativity, which reflects the tendency of actors with high in-degree to be connected to other actors with high in-degrees}
+\item{in-out degree assortativity, which reflects which reflects the tendency of actors with high in-degree to be connected to other actors with high out-degrees}
+\item{out-in degree assortativity, which reflects which reflects the tendency of actors with high out-degree to be connected to other actors with high in-degrees}
+\item{out-out degree assortativity, which reflects which reflects the tendency of actors with high out-degree to be connected to other actors with high out-degrees}
 \end{enumerate}
 
 \paragraph{Behavior-related Effects\\}
